--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -1,1 +1,9 @@
 <h1>Messages</h1>
+
+<ol id="messages">
+</ol>
+
+<%= form_for Message.new, remote: true do |f| %>
+  <%= f.text_field :body %>
+  <%= f.submit "Send" %>
+<% end %>
