node production url

--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -1,6 +1,6 @@
 <h1>Messages</h1>
 
-<ol id="messages">
+<ol id="messages" data: { node_url: node_url }>
 </ol>
 
 <%= form_for Message.new, remote: true do |f| %>
